_sass/index.scss
// Default variables
$purple: rgb(90, 50, 120);
$navy: rgb(0, 90, 120);
$maroon: rgb(220, 85, 120);
$blue: rgb(140, 150, 190);
$olive: rgb(130, 200, 180);
$fuchsia: rgb(250, 210, 210);
$red: rgb(240, 90, 90);
$yellow: rgb(250, 220, 115);
$green: rgb(80, 170, 20);
$black: rgb(0, 5, 10);
$aqua: rgb(230, 245, 255);


// Dependencies
@import "../node_modules/normalize.css/normalize";
@import "../node_modules/basscss-sass/scss/basscss";

// Basscss Addons
@import "../node_modules/basscss-sass/scss/responsive-margin";
@import "../node_modules/basscss-sass/scss/responsive-padding";
// @import "../node_modules/basscss-sass/scss/forms";
// @import "../node_modules/basscss-sass/scss/btn";
// @import "../node_modules/basscss-sass/scss/btn-outline";
// @import "../node_modules/basscss-sass/scss/btn-primary";
@import "../node_modules/basscss-sass/scss/colors";
@import "../node_modules/basscss-sass/scss/background-colors";
@import "../node_modules/basscss-sass/scss/background-images";
@import "../node_modules/basscss-sass/scss/border-colors";
// @import "../node_modules/basscss-sass/scss/darken";
// @import "../node_modules/basscss-sass/scss/lighten";
// @import "../node_modules/basscss-sass/scss/input-range";
// @import "../node_modules/basscss-sass/scss/progress";
// @import "../node_modules/basscss-sass/scss/all";
// @import "../node_modules/basscss-sass/scss/media-object";
// @import "../node_modules/basscss-sass/scss/highlight";
// @import "../node_modules/basscss-sass/scss/highlight-dark";


// Import partials.
@import "base";
@import "layout";
@import "module/syntax-highlighting";
@import "module/color";
@import "state";
// @import "theme";
// @import "shame";

